fixed visibility icon

--- a/modules/questionnaire/tool.css
+++ b/modules/questionnaire/tool.css
@@ -1,5 +1,6 @@
 .invisible {
-    color: silver !important;
+    color: silver;
+    font-style: italic;
 }
 
 
